--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,7 +17,7 @@
         </div>
     }
     
-    <p class="lead">Follow Rugby shows the best #rugby Twitter content with profiles grouped in relevant categories.</p>
+    <p class="lead">Follow Rugby shows the best #rugby Twitter content with profiles grouped in relevant categories and video channels from leading club, internationals sides and governing bodies!</p>
     <table border=0>
     <tr><td valign="top" width=100>
     <p><strong>Match Centre</strong></td><td>Tweets from both sides during games and the match #hashtag conversation so you can join in.</p></td></tr>
