--- a/app/views/admin/games/createGame.scala.html
+++ b/app/views/admin/games/createGame.scala.html
@@ -34,6 +34,7 @@
           @inputText(gameForm("time"), '_label -> "Time (00:00)")
           @inputText(gameForm("gameDate"), '_label -> "Date YYYY-MM-DD")
           @inputText(gameForm("widgetId"), '_label -> "Widget Id")
+          @inputText(gameForm("pos"), '_label -> "Position on day (1=first game etc.)")
            
         
         </fieldset>
