--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -131,12 +131,21 @@ $(function() {
     <p class="lead">Click on a group on the left to see its updated Twitter feed and all associated Twitter profiles.</p>
   } else {
   @team.map { t =>
-    <h2>@t.name</h2>
+    
   	
   	@t.twitterName.map { twitter =>
-  	<h3>
-  	  <a href="https://www.twitter.com/intent/user?screen_name=@{twitter}">@@@twitter</a> 
-  	</h3>
+  	  <h2>@t.name</h2>
+        <table>
+         <tr>
+          <td><img src="@routes.Assets.at("images/twitter-bird-blue-on-white.png")" height="40" width="40"></img></td>    
+          <td>
+            <h3>
+              <a href="https://www.twitter.com/intent/user?screen_name=@{twitter}">@@@twitter</a> 
+            </h3>
+          </td>   
+         </tr>
+        </table>
+  	
   	}
   }
   
@@ -183,6 +192,7 @@ $(function() {
      }
  
 @media.videoPlayerChannel.map { v => 
+  <h5>Latest Team Videos</h5>
   @if(v.player.isInstanceOf[VideoPlayer.YouTube]) {   
      <div id="channelplayer">
         </div>
