Change margin colour to grey and add yellow menus.

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -3,6 +3,7 @@
 @main("Follow Rugby"){
  <div class="row">
   <div class="span8">
+    <div class="textpadding">
     <p class="lead">Follow Rugby has been designed to make it easier for anyone interested in rugby to follow its key developments on Twitter.</p>
 
     <p>Rugby Twitter profiles have been organised into relevant groupings - please browse and interact as you would normally on Twitter: follow, mention, reply, re-tweet, favorite etc!</p>
@@ -18,7 +19,7 @@
     <p><small>*We cannot guarantee that all teams will publish updates for all matches but the official accounts of club and international sides are increasingly Tweeting during games – it is a great way to follow the action.</small></p>
     <br>
     <p><small>**It is possible that some Twitter accounts may not be active or the official account of the rugby personality mentioned. We do what we can to avoid these errors but please do not hesitate to contact <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a> if you spot any inaccuracies or if you have any comments / questions regarding the content listed on the site.  </small></p>
-    
+     </div>
     </div>
 
   <div class="span4"> 
