--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,8 +18,12 @@
 <script type="text/javascript">stLight.options({publisher: "085bb082-039f-4f04-9248-316d1eb48f12", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 
    <style type="text/css">
-      body {
-      }
+   
+   body {
+            background-color: #e1e1df;
+        }
+
+        
       .navbar {
        
       }
@@ -57,6 +61,10 @@
     overflow: auto;
     border: 0;
 }
+
+.textpadding {
+  padding: 15px
+}
      
       
       
@@ -86,7 +94,7 @@
     </div>
         <div class="navbar navbar-inverse">
         <div class="navbar-inner">
-        <div class="container">
+        
              	
           <ul class="nav nav-pills">
             <li class="dropdown">
@@ -116,7 +124,7 @@
         </div>
         </div>
     
-    
+   <div class="container"> 
       
       @content
     
