--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -16,7 +16,7 @@
             <strong>Oops!</strong> @message
         </div>
     }
-    
+    <div class="textpadding">
     <p class="lead">Follow Rugby shows the best #rugby Twitter content with profiles grouped in relevant categories and video channels from leading club, internationals sides and governing bodies!</p>
     <table border=0>
     <tr><td valign="top" width=100>
@@ -39,6 +39,7 @@
     <br></br>
     <p class="text-center"><strong>More Rugby to Follow.</strong></p>
   </div>
+  </div>
   
  
   <div class="span4"> 
@@ -46,10 +47,10 @@
 <span class='st_facebook_large' displayText='Facebook'></span>
 <span class='st_linkedin_large' displayText='LinkedIn'></span>
 <span class='st_email_large' displayText='Email'></span>
-		<div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/FollowRugbySite" data-widget-id="320940036453449730"></a></div>
+    <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/FollowRugbySite" data-widget-id="320940036453449730"></a></div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
-	</div>
+  </div>
  </div>   
 
 
