--- a/app/views/matchCentre.scala.html
+++ b/app/views/matchCentre.scala.html
@@ -12,7 +12,7 @@
 	@competition.map { comp =>
   <div class="row">
  <div class="span12">
-           <h1>@comp.name</h1>
+           <div class="textpadding"><h1>@comp.name</h1></div>
          </div>
 </div>
 	}
