--- a/app/views/admin/teams/editTeam.scala.html
+++ b/app/views/admin/teams/editTeam.scala.html
@@ -1,4 +1,4 @@
-@(id: Int)(teamForm: Form[TeamMembers])(categories: Seq[(String, String)])(teamMembers: Seq[Member])(allOtherMembers: Seq[Member])
+@(id: Int)(teamForm: Form[TeamMembers])(categories: Seq[(String, String)])(teamMembers: Seq[Member])(allOtherMembers: Seq[Member])(videoPlayers: Seq[(String, String)])
 
 @import helper._
 @import views.html.admin.main
@@ -16,7 +16,12 @@
             @inputText(teamForm("team")("name"), '_label -> "Team name")
             @inputText(teamForm("team")("twitterName"), '_label -> "Twitter Name")
             @inputText(teamForm("team")("vidChannel"), '_label -> "Channel Name")
-            @inputText(teamForm("team")("videoPlayer"), '_label -> "Video Player (1=YouTube, 2=DailyMotion)")
+            @select(
+                teamForm("team")("videoPlayer"), 
+                videoPlayers, 
+                '_label -> "Video Player", '_default -> "-- Choose a Video Player --",
+                '_showConstraints -> false
+            )
             @select(
                 teamForm("team")("categoryId"), 
                 categories, 
