--- a/app/views/admin/tables.scala.html
+++ b/app/views/admin/tables.scala.html
@@ -7,6 +7,7 @@
     <li><a href="@routes.Members.memberList(0, 2, "")">Member</a></li>
     <li><a href="@routes.Widgets.widgetList(0, 2, "")">Widget</a></li>
   <li><a href="@routes.Games.gameList(0, 2)">Match Centre</a></li>
+  <li><a href="@routes.Videos.videoList(0, 2)">Videos</a></li>
   </ul>
 	
 	<a href="@routes.Administrator.logout">Logout</a>
