--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -118,6 +118,14 @@
             </li>
             <li><a href="@routes.Application.selectCategory(8, "morerugby")">More Rugby</a></li>
             <li><a href="@routes.Application.selectCategory(10, "rugbyunited")">#rugbyunited</a></li>
+            <li class="dropdown">
+                      <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Videos<b class="caret"></b></a>
+                      <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
+                        @VideoCategory.all.map { cat =>
+                          <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectVideoCategory(cat.id.get, cat.name)">@cat.name</a></li>
+                        }
+                      </ul>
+            </li>
       	    <li><a href="@routes.Application.about">About</a></li>
         	</ul>
         </div>
