Added more info. Working for youtube. Limited homepage thumbnails to 10.

--- a/app/views/videos.scala.html
+++ b/app/views/videos.scala.html
@@ -4,6 +4,8 @@
 
 @main("Follow Rugby"){
   <div class="span12 pagination-centered">
+    <h2>@video.title</h2>
+    <p class="lead">@video.description</p>
     @if(videoPlayer.name.toLowerCase == "youtube") {  
       <iframe width="560" height="315" src="//www.youtube.com/embed/@video.link" frameborder="0" allowfullscreen></iframe>  
     }
