Video category page now shows a table of videos.

--- a/app/views/admin/videos/videoList.scala.html
+++ b/app/views/admin/videos/videoList.scala.html
@@ -44,7 +44,7 @@
     
     @Option(currentPage.items).filterNot(_.isEmpty).map { videos =>
         
-        <table class="videos table-striped">
+        <table class="table-striped">
             <thead>
                 <tr>
                     @header(2, "Video title")
