--- a/app/views/admin/games/editGame.scala.html
+++ b/app/views/admin/games/editGame.scala.html
@@ -35,6 +35,7 @@
           @inputText(gameForm("gameDate"), '_label -> "Date YYYY-MM-DD")
           @inputText(gameForm("widgetId"), '_label -> "Widget Id")
           @inputText(gameForm("pos"), '_label -> "Position on day (1=first game etc.)")
+          @inputText(gameForm("hashtag"), '_label -> "Hashtag")
            
         
         </fieldset>
