--- a/app/views/videoCategories.scala.html
+++ b/app/views/videoCategories.scala.html
@@ -46,7 +46,7 @@
     <h2>@videoCategory.name</h2>
     @Option(currentPage.items).filterNot(_.isEmpty).map { videos =>
         
-        <table class="table table-bordered">
+        <table class="table table-striped table-bordered table-condensed">
             <thead>
                 <tr>
                   <th>Date added</th>
