various little bits. vid categories can now be more than 1 word, video real thumbnails are links too.

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -8,17 +8,12 @@
 
     <p>Rugby Twitter profiles have been organised into relevant groupings - please browse and interact as you would normally on Twitter: follow, mention, reply, re-tweet, favorite etc!</p>
 
-    <p>The Match Centre shows the Twitter feeds of both teams that are participating in matches from leading global rugby competitions. This allows you to see the perspective of both sides during a match. There is also a third feed for the match #hashtag – please join in the match conversation. The Match Centre will be updated before each round of major matches and is a great way to follow the action and keep up with live scores on the internet.* </p>
+    <p>The Match Centre shows the Twitter feeds of both teams that are participating in matches from leading global rugby competitions. This allows you to see the perspective of both sides during a match. There is also a third feed for the match #hashtag – please join in the match conversation. The Match Centre will be updated before each round of major matches and is a great way to follow the action and keep up with live scores on the internet.</p>
     
-    <p>To help the site develop please follow <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> and suggest new Rugby Twitter accounts for us to add to the site. For longer comments and enquiries, please send an e-mail to <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a>.**</p>
+    <p>To help the site develop please follow <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> and suggest new Rugby Twitter accounts for us to add to the site. For longer comments and enquiries, please send an e-mail to <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a>.</p>
 
     <br>
     <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo1.png")"></img></div><div class="span3"></div>
-    <br></br>
-    <br></br>
-    <p><small>*We cannot guarantee that all teams will publish updates for all matches but the official accounts of club and international sides are increasingly Tweeting during games – it is a great way to follow the action.</small></p>
-    <br>
-    <p><small>**It is possible that some Twitter accounts may not be active or the official account of the rugby personality mentioned. We do what we can to avoid these errors but please do not hesitate to contact <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a> if you spot any inaccuracies or if you have any comments / questions regarding the content listed on the site.  </small></p>
      </div>
     </div>
 
