--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -33,7 +33,10 @@
     </div>
   </div>
   <div class="span4"> 
-  
+    <span class='st_twitter_large' displayText='Tweet'></span>
+    <span class='st_facebook_large' displayText='Facebook'></span>
+    <span class='st_linkedin_large' displayText='LinkedIn'></span>
+    <span class='st_email_large' displayText='Email'></span>
     <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/FollowRugbySite" data-widget-id="320940036453449730"></a></div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
