--- a/app/views/videoReel.scala.html
+++ b/app/views/videoReel.scala.html
@@ -14,10 +14,10 @@
 <div class="textpadding"><table>
     @videos.map { case (vid, videoCategory, videoPlayer) =>
       <tr>
-        <td align="center"><a href="@routes.Application.selectVideo(vid.id.get, videoCategory.id.get, videoCategory.name, Linker.linkVideo(vid.title))"><h6>@vid.title</h6></a></td>
+        <td align="center"><a href="@routes.Application.selectVideo(vid.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(vid.title))"><h6>@vid.title</h6></a></td>
       </tr>
       <tr>
-        <td align="center"><img width="128" height="72" src="@videoLink(videoPlayer, vid.link)"></img></td>
+        <td align="center"><a href="@routes.Application.selectVideo(vid.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(vid.title))"><img width="128" height="72" src="@videoLink(videoPlayer, vid.link)"></img></a></td>
       </tr>   
     }
     </table>
