--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -124,7 +124,7 @@
                       <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Videos<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
                         @VideoCategory.all.map { cat =>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectVideoCategory(cat.id.get, cat.name)">@cat.name</a></li>
+                          <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectVideoCategory(cat.id.get, Linker.strip(cat.name))">@cat.name</a></li>
                         }
                       </ul>
             </li>
