Distinct new profiles on front page.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -23,6 +23,9 @@
         </div>
         }     
       }
+      @if(compGames.isEmpty) {
+        <p class="muted"><i>No games scheduled this week.</i></p>  
+      }
     <div class="row"> 
       <h4>Latest Twitter profiles added:</h4>
       <p>
