--- a/app/views/videos.scala.html
+++ b/app/views/videos.scala.html
@@ -25,6 +25,8 @@
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'followrugby'; // required: replace example with your forum shortname
+        var disqus_identifier = '@video.id.get/@Linker.linkVideo(video.title)';
+        var disqus_url = 'http://follow-rugby.com@routes.Application.selectVideo(video.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(video.title))';
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
