--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -63,13 +63,23 @@
 }
 
 .textpadding {
-  padding: 15px
+  padding: 15px;
+}
+
+.topmargin {
+  padding: 8px;
+}
+
+.linebreak {
+  padding: 5px;
+}
+.row-yellow {
+  background-color: #1b1b1b;
+border-bottom-left-radius: 25px;
+border-bottom-right-radius: 25px;
 }
 
 
-     
-      
-      
     </style>
 
 <script>
@@ -94,7 +104,8 @@
         </div>
       </div>
     </div>
-        <div class="navbar navbar-inverse">
+        <div class="navbar">
+        <div class="navbar-inverse">
         <div class="navbar-inner">
         
              	
@@ -128,8 +139,10 @@
                         }
                       </ul>
             </li>
+      	    <li><a href="@routes.Application.joinIn">Join In</a></li>
       	    <li><a href="@routes.Application.about">About</a></li>
         	</ul>
+        </div>
         </div>
         </div>
         </div>
