--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -127,6 +127,7 @@ $(function() {
     </div>
   </div>
   <div class="span5">
+  <div class="topmargin"></div> 
   @if(players.isEmpty) {
     <p class="lead">Click on your favourite groups on the left to see who to follow. Also check out their tweets and videos.</p>
   } else {
@@ -170,6 +171,7 @@ $(function() {
   </div>
 
   <div class="span4">
+  <div class="topmargin"></div> 
   <span class='st_twitter_large' displayText='Tweet'></span>
 <span class='st_facebook_large' displayText='Facebook'></span>
 <span class='st_linkedin_large' displayText='LinkedIn'></span>
